--- a/composer.json
+++ b/composer.json
@@ -30,4 +30,16 @@
 		,"openlss/lib-config":		">=0.0.1"
 		,"openlss/lib-db":			">=0.0.1"
 	}
+	,"require-dev": {
+		 "openlss/core-boot":		"dev-master"
+		,"openlss/func-log":		"dev-master"
+		,"openlss/func-mda":		"dev-master"
+		,"openlss/lib-config":		"dev-master"
+		,"openlss/lib-db":			"dev-master"
+	}
+	,"autoload": {
+		"psr-0": {
+			"LSS":	""
+		}
+	}
 }
