fixed versioning for dev

--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
 	]
 	,"require": {
 		 "php":						">=5.3.2"
-		,"openlss/core-boot":		"~0.0.1"
-		,"openlss/func-log":		"~0.0.1"
-		,"openlss/func-mda":		"~0.0.1"
-		,"openlss/lib-config":		"~0.0.1"
-		,"openlss/lib-db":			"~0.0.1"
+		,"openlss/core-boot":		"dev-master"
+		,"openlss/func-log":		"dev-master"
+		,"openlss/func-mda":		"dev-master"
+		,"openlss/lib-config":		"dev-master"
+		,"openlss/lib-db":			"dev-master"
 	}
 	,"autoload": {
 		"psr-0": {
